--- a/public/themes/simpleboot3/public/assets/style/css/news.css
+++ b/public/themes/simpleboot3/public/assets/style/css/news.css
@@ -166,12 +166,14 @@
 	font-size: 0.29rem;
 	text-align: left;
 }
-
-.newsDetail_content .other {
+.newsDetail_content .other{
+	width: 100%;
+}
+.newsDetail_content .other a {
 	width: 100%;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	/* flex-direction: column; */
+	/* align-items: center; */
 }
 
 .newsDetail_content .other_item {
@@ -378,16 +380,18 @@
 	}
 
 	.newsDetail_content .other .other_item .item_time {
-		width: 3.33rem;
+		width: 3rem;
 		font-size: 0.8rem;
-		text-align: left;
+		text-align: justify;
 		color: rgba(153, 153, 153, 1);
 	}
 
 	.newsDetail_content .other .other_item .item_title {
+		width: calc(100% - 3.67rem);
 		margin-left: 0.67rem;
 		font-size: 0.8rem;
 		text-align: left;
 		color: rgba(51, 51, 51, 1);
+		line-height: 1.5;
 	}
 }
