--- a/public/themes/simpleboot3/public/assets/style/css/solution.css
+++ b/public/themes/simpleboot3/public/assets/style/css/solution.css
@@ -269,6 +269,7 @@
     font-weight: 900;
     line-height: 2;
     color: #FFFFFF;
+    display: none;
 }
 
 .solution .solution_advantage {
@@ -740,6 +741,27 @@
         font-size: 0.8rem;
         text-align: center;
         margin-bottom: 0.67rem;
+    }
+
+    .solution-advantage-box .solution_advantage .solution-flex {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .solution-advantage-box .solution_advantage .solution-flex .list {
+        width: 100%;
+    }
+
+    .solution-advantage-box .solution_advantage .solution-flex .list2 {
+        width: 100%;
+        height: 8rem;
+        margin-bottom: 4rem;
+        border-radius: .3333rem;
+        font-size: 1.0667rem;
+        font-weight: 900;
+        line-height: 2;
+        color: #FFFFFF;
+        display: none;
     }
 
     .solution_advantage .list {
