--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -13,7 +13,7 @@ body {
 
 .index-banner-box {
     height: 12.5rem;
-    background: linear-gradient(180deg, var(--color-primary) 0%, rgba(255,165,0,0) 100%);
+    background: linear-gradient(180deg, var(--color-primary) 0%, rgba(255, 165, 0, 0) 100%);
 }
 
 .index-banner-box .title {
@@ -161,19 +161,19 @@ body {
 }
 
 .index-product .index-product-item .index-product-item-innerbox2 .text {
-	width: 100%;
-	display: block;
+    width: 100%;
+    display: block;
     color: #999999;
     font-size: 0.21rem;
     line-height: 0.53rem;
     text-align: justify;
-	text-overflow: -o-ellipsis-lastline;
-	overflow: hidden;	
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;	
-	line-clamp: 2;					
-	-webkit-box-orient: vertical;
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .index-product .index-product-item .index-product-item-innerbox2 .img {
@@ -274,6 +274,7 @@ body {
 /* 一站式人力资源整体解决方案 */
 .index-solution {
     padding: 1.85rem 0;
+    padding-bottom: 1rem;
     background: url(../imgs/index/solution-bg.png) center bottom no-repeat;
     /* background-size: 100% 100%; */
     background-size: cover;
@@ -341,15 +342,19 @@ body {
 .index-solution .index-solution-box .index-solution-box-right {
     width: calc(50% + 30px);
 }
-.index-solution .index-solution-box .index-solution-box-right ul{
-	margin: 0;
+
+.index-solution .index-solution-box .index-solution-box-right ul {
+    margin: 0;
 }
-.index-solution .index-solution-box .index-solution-box-right ul li{
-	display: none;
+
+.index-solution .index-solution-box .index-solution-box-right ul li {
+    display: none;
 }
-.index-solution .index-solution-box .index-solution-box-right ul li.active{
-	display: block;
+
+.index-solution .index-solution-box .index-solution-box-right ul li.active {
+    display: block;
 }
+
 .index-solution .index-solution-box .index-solution-box-right .text {
     color: #2E2E2E;
     font-size: 0.25rem;
@@ -385,7 +390,7 @@ body {
 
 .index-solution .index-solution-box .index-solution-box-left-bottom .item {
     flex: 1;
-    border-top: rgba(245, 245, 245, 1) solid 2px;
+    /* border-top: rgba(245, 245, 245, 1) solid 2px; */
     padding-top: 0.71rem;
     position: relative;
 }
@@ -396,6 +401,7 @@ body {
     position: absolute;
     top: -10px;
     left: calc(50% - 10px);
+    display: none;
 }
 
 .index-solution .index-solution-box .index-solution-box-left-bottom .item .img-logo {
@@ -817,8 +823,8 @@ body {
 .index-news .more {
     text-align: center;
     margin-top: 0.71rem;
-	color: var(--color-primary);
-	font-size: 0.25rem;
+    color: var(--color-primary);
+    font-size: 0.25rem;
 }
 
 .index-news .more a {
@@ -2082,19 +2088,19 @@ label {
         font-size: 0.93rem;
         line-height: 2rem;
         margin-bottom: 1rem;
-		text-align: right;
+        text-align: right;
     }
 
     .index-product .index-product-item .index-product-item-innerbox2 .text {
         font-size: 0.86rem;
         line-height: 1.6rem;
-		text-overflow: -o-ellipsis-lastline;
-		overflow: hidden;				//溢出内容隐藏
-		text-overflow: ellipsis;		//文本溢出部分用省略号表示
-		display: -webkit-box;			//特别显示模式
-		-webkit-line-clamp: 2;			//行数
-		line-clamp: 2;					
-		-webkit-box-orient: vertical;	//盒子中内容竖直排列
+        text-overflow: -o-ellipsis-lastline;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     .index-solution {
@@ -2401,7 +2407,7 @@ label {
     }
 
     .index-news .index-news-box .item {
-		width: 100%;
+        width: 100%;
         position: relative;
         margin-right: 0;
         padding-bottom: 0;
@@ -2454,11 +2460,11 @@ label {
 
     .index-customer .index-customer-box div img {
         height: 4.8rem;
-		filter: grayscale(0);
-		opacity: 1;
+        filter: grayscale(0);
+        opacity: 1;
     }
 
-    .index-customer .more a{
+    .index-customer .more a {
         font-size: 0.93rem;
     }
 
@@ -2466,11 +2472,13 @@ label {
         width: 23rem;
         height: 3.6rem;
         line-height: 3.6rem;
-        
+
     }
-	.index-bottom .solution-btn a{
-		font-size: 0.93rem;
-	}
+
+    .index-bottom .solution-btn a {
+        font-size: 0.93rem;
+    }
+
     /* 合伙人计划页面 */
     .partner .index-banner-top {
         margin-top: 50px;
