--- a/public/themes/simpleboot3/public/assets/style/css/news.css
+++ b/public/themes/simpleboot3/public/assets/style/css/news.css
@@ -1,205 +1,211 @@
 .news {}
 
 .news .banner {
-	width: 100%;
-	background-image: url(../imgs/news/banner.png);
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: cover;
-	overflow: hidden;
-	text-align: center;
-	line-height: 12.5rem;
+    width: 100%;
+    background-image: url(../imgs/news/banner.png);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    text-align: center;
+    line-height: 12.5rem;
 }
 
 .news .banner-box {
-	width: 100%;
-	height: 12.5rem;
-	background: linear-gradient(177.97deg, rgba(255, 165, 0, 1) 30.5%, rgba(255, 80, 0, 0.1) 115.11%);
-	text-align: center;
-	line-height: 12.5rem;
+    width: 100%;
+    height: 12.5rem;
+    background: linear-gradient(177.97deg, rgba(255, 165, 0, 1) 30.5%, rgba(255, 80, 0, 0.1) 115.11%);
+    text-align: center;
+    line-height: 12.5rem;
 }
 
 .news_banner_text {
-	width: 100%;
-	color: rgba(255, 255, 255, 1);
-	font-size: 0.86rem;
-	text-align: center;
-	font-weight: bold;
+    width: 100%;
+    color: rgba(255, 255, 255, 1);
+    font-size: 0.86rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 .news .typelist {
-	height: 1.07rem;
-	line-height: 1.07rem;
-	background-color: rgba(250, 250, 250, 1);
-	display: flex;
-	/* flex-direction: column; */
-	align-items: center;
+    height: 1.07rem;
+    line-height: 1.07rem;
+    background-color: rgba(250, 250, 250, 1);
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
 }
 
 .news .type {
-	width: 60%;
-	height: 100%;
-	display: flex;
-	text-align: center;
-	margin: 0 auto;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .news .type li {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 .news .type li.active {
-	border-bottom: solid 4px var(--color-primary);
+    border-bottom: solid 4px var(--color-primary);
 }
 
 .news .type a {
-	color: #222326;
-	font-size: 0.29rem;
+    color: #222326;
+    font-size: 0.29rem;
 }
 
 .news .list {
-	width: 100%;
-	padding: 1.79rem 4.38rem 2.68rem 4.38rem;
-	display: flex;
-	flex-wrap: wrap;
-	/* justify-content: space-between; */
-	background-color: #ffffff;
+    /* width: 100%; */
+    width: 25.5357rem;
+    margin: 0 auto;
+    padding: 1.7857rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #ffffff;
 }
 
 .news .list .item {
-	margin-bottom: 0.89rem;
-	width: calc(33.33% - 17px);
-	height: 7.82rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-right: 0.44rem;
+    margin-bottom: 0.89rem;
+    /* width: calc(33.33% - 17px); */
+    width: 8.2143rem;
+    height: 7.82rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin-right: 0.44rem; */
 }
 
 .news .list .item:nth-of-type(3n+3) {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .news .item img {
-	width: 100%;
-	height: 4rem;
-	border-radius: 0.09rem 0.09rem 0 0;
+    width: 100%;
+    height: 4rem;
+    border-radius: 0.09rem 0.09rem 0 0;
+    object-fit: cover;
 }
 
 .news .list .item .item_right {
-	width: 100%;
-	padding: 0.54rem 0 0 0;
-	border-radius: 0.09rem 0.09rem 0 0;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+    width: 100%;
+    padding: 0.54rem 0 0 0;
+    border-radius: 0.09rem 0.09rem 0 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .news .list .item .item_right .title {
-	width: 100%;
-	color: #000000;
-	font-size: 0.32rem;
-	text-align: left;
-	font-weight: bold;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+    width: 100%;
+    color: #000000;
+    font-size: 0.32rem;
+    text-align: left;
+    font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .news .list .item .item_right .content {
-	margin-top: 0.36rem;
-	width: 100%;
-	color: rgba(114, 116, 118, 1);
-	font-size: 0.23rem;
-	text-align: justify;
-	line-height: 0.54rem;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 3;
-	/*想省略几行就写几*/
-	-webkit-box-orient: vertical;
+    margin-top: 0.36rem;
+    width: 100%;
+    color: rgba(114, 116, 118, 1);
+    font-size: 0.23rem;
+    text-align: justify;
+    line-height: 0.54rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /*想省略几行就写几*/
+    -webkit-box-orient: vertical;
 }
 
 
 .newsDetail {
-	padding: 2.32rem 6.52rem 2.68rem 6.52rem;
+    padding: 2.32rem 6.52rem 2.68rem 6.52rem;
 
 }
 
 .newsDetail .newsDetail_content {
-	padding: 0.54rem 0.89rem 1.79rem 0.89rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #FFFFFF;
+    padding: 0.54rem 0.89rem 1.79rem 0.89rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FFFFFF;
 }
 
 .newsDetail_content .title {
-	width: 100%;
-	color: rgba(51, 51, 51, 1);
-	font-size: 0.5rem;
-	text-align: center;
-	font-weight: bold;
+    width: 100%;
+    color: rgba(51, 51, 51, 1);
+    font-size: 0.5rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 .newsDetail_content .time {
-	margin-top: 0.54rem;
-	width: 100%;
-	color: rgba(153, 153, 153, 1);
-	font-size: 0.25rem;
-	text-align: left;
+    margin-top: 0.54rem;
+    width: 100%;
+    color: rgba(153, 153, 153, 1);
+    font-size: 0.25rem;
+    text-align: left;
 }
 
 .newsDetail_content .content {
-	margin-top: 0.89rem;
-	width: 100%;
-	color: rgba(114, 116, 118, 1);
-	font-size: 0.27rem;
-	text-align: justify;
-	line-height: 0.57rem;
+    margin-top: 0.89rem;
+    width: 100%;
+    color: rgba(114, 116, 118, 1);
+    font-size: 0.27rem;
+    text-align: justify;
+    line-height: 0.57rem;
 }
 
 .newsDetail_content .tag {
-	width: 100%;
-	color: rgba(51, 51, 51, 1);
-	font-size: 0.29rem;
-	text-align: left;
+    width: 100%;
+    color: rgba(51, 51, 51, 1);
+    font-size: 0.29rem;
+    text-align: left;
 }
-.newsDetail_content .other{
-	width: 100%;
+
+.newsDetail_content .other {
+    width: 100%;
 }
+
 .newsDetail_content .other a {
-	width: 100%;
-	display: flex;
-	/* flex-direction: column; */
-	/* align-items: center; */
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
 }
 
 .newsDetail_content .other_item {
-	width: 100%;
-	margin-top: 0.45rem;
-	display: flex;
-	align-items: center;
+    width: 100%;
+    margin-top: 0.45rem;
+    display: flex;
+    align-items: center;
 }
 
 .newsDetail_content .other .other_item .item_time {
-	width: 1rem;
-	font-size: 0.25rem;
-	text-align: left;
-	color: rgba(153, 153, 153, 1);
+    width: 1rem;
+    font-size: 0.25rem;
+    text-align: left;
+    color: rgba(153, 153, 153, 1);
 }
 
 .newsDetail_content .other .other_item .item_title {
-	margin-left: 0.27rem;
-	font-size: 0.25rem;
-	text-align: left;
-	color: rgba(51, 51, 51, 1);
+    margin-left: 0.27rem;
+    font-size: 0.25rem;
+    text-align: left;
+    color: rgba(51, 51, 51, 1);
 }
 
 @media (max-width : 425px) {
 
-	/* .news .banner {
+    /* .news .banner {
 	    width: 100%;
 	    height: 13.33rem;
 	    background-image: url(../imgs/news/banner.png);
@@ -209,189 +215,190 @@
 	    text-align: center;
 	    line-height: 13.33rem;
 	} */
-	.news .banner-box {
-		height: 13.33rem;
-	}
+    .news .banner-box {
+        height: 13.33rem;
+    }
 
-	.news_banner_text {
-		width: 100%;
-		color: rgba(255, 255, 255, 1);
-		font-size: 1.33rem;
-		text-align: center;
-		font-weight: bold;
-	}
+    .news_banner_text {
+        width: 100%;
+        color: rgba(255, 255, 255, 1);
+        font-size: 1.33rem;
+        text-align: center;
+        font-weight: bold;
+    }
 
-	.news .typelist {
-		width: 100%;
-		height: 3.33rem;
-		overflow-x: auto;
-		overflow-y: hidden;
-		line-height: 3.33rem;
-		background-color: rgba(250, 250, 250, 1);
-		/* display: flex;
+    .news .typelist {
+        width: 100%;
+        height: 3.33rem;
+        overflow-x: auto;
+        overflow-y: hidden;
+        line-height: 3.33rem;
+        background-color: rgba(250, 250, 250, 1);
+        /* display: flex;
 		flex-direction: column;
 		align-items: center; */
-	}
+    }
 
-	.news .type {
-		width: auto;
-		/* display: flex; */
-		flex-wrap: nowrap;
-		flex-direction: row;
-		/* text-align: center; */
-		font-size: 0.93rem;
-		margin-bottom: 0;
-	}
+    .news .type {
+        width: auto;
+        /* display: flex; */
+        flex-wrap: nowrap;
+        flex-direction: row;
+        /* text-align: center; */
+        font-size: 0.93rem;
+        margin-bottom: 0;
+    }
 
-	.news .type li {
-		width: 7rem;
-		margin: 0 auto;
-	}
+    .news .type li {
+        width: 7rem;
+        margin: 0 auto;
+    }
 
-	.news .type li.active {
-		border-bottom: solid 4px var(--color-primary);
-	}
+    .news .type li.active {
+        border-bottom: solid 4px var(--color-primary);
+    }
 
-	.news .type a {
-		color: #222326;
-		font-size: 0.8rem;
-	}
+    .news .type a {
+        color: #222326;
+        font-size: 0.8rem;
+    }
 
-	.news .list {
-		width: 100%;
-		padding: 2rem 1rem 2rem 1rem;
-		display: flex;
-		background-color: #ffffff;
-		align-items: center;
-		flex-direction: column;
-	}
+    .news .list {
+        width: 100%;
+        padding: 2rem 1rem 2rem 1rem;
+        display: flex;
+        background-color: #ffffff;
+        align-items: center;
+        flex-direction: column;
+    }
 
-	.news .list .item {
-		width: 100%;
-		height: 5.87rem;
-		margin-bottom: 1rem;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-	}
+    .news .list .item {
+        width: 100%;
+        height: 5.87rem;
+        margin-bottom: 1rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
-	.news .list .item img {
-		width: 9.33rem;
-		height: 5.87rem;
-		border-radius: 0.33rem;
-	}
+    .news .list .item img {
+        width: 9.33rem;
+        height: 5.87rem;
+        border-radius: 0.33rem;
+    }
 
-	.news .list .item .item_right {
-		padding: 0;
-		width: 13rem;
-		height: 5.87rem;
-		margin-left: 0.67rem;
-		border-radius: 0.33rem;
-	}
+    .news .list .item .item_right {
+        padding: 0;
+        width: 13rem;
+        height: 5.87rem;
+        margin-left: 0.67rem;
+        border-radius: 0.33rem;
+    }
 
-	.news .list .item .item_right .title {
-		width: 100%;
-		height: 4rem;
-		color: #000000;
-		font-size: 1.07rem;
-		line-height: 1.7rem;
-		text-align: justify;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		display: -webkit-box;
-		-webkit-line-clamp: 2;
-		/*想省略几行就写几*/
-		-webkit-box-orient: vertical;
-	}
+    .news .list .item .item_right .title {
+        width: 100%;
+        /* height: 4rem; */
+        color: #000000;
+        font-size: 1.07rem;
+        line-height: 1.7rem;
+        text-align: justify;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        /*想省略几行就写几*/
+        -webkit-box-orient: vertical;
+        white-space: pre-wrap;
+    }
 
-	.news .list .item .item_right .content {
-		display: none;
-	}
+    .news .list .item .item_right .content {
+        display: none;
+    }
 
-	.news .list .item .item_right .date {
-		margin-top: 1.5rem;
-		width: 100%;
-		color: rgba(46, 46, 46, 1);
-		font-size: 0.87rem;
-		text-align: justify;
-	}
+    .news .list .item .item_right .date {
+        margin-top: 1rem;
+        width: 100%;
+        color: rgba(46, 46, 46, 0.6);
+        font-size: 0.87rem;
+        text-align: justify;
+    }
 
-	.newsDetail {
-		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
-	}
+    .newsDetail {
+        padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+    }
 
-	.newsDetail .breadcrumb {
-		width: 100%;
-		margin-top: 2.67rem;
-	}
+    .newsDetail .breadcrumb {
+        width: 100%;
+        margin-top: 2.67rem;
+    }
 
-	.newsDetail .newsDetail_content {
-		padding: 0.67rem;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		background-color: #FFFFFF;
-	}
+    .newsDetail .newsDetail_content {
+        padding: 0.67rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #FFFFFF;
+    }
 
-	.newsDetail_content .title {
-		width: 100%;
-		color: rgba(51, 51, 51, 1);
-		font-size: 1.07rem;
-		text-align: center;
-		font-weight: bold;
-	}
+    .newsDetail_content .title {
+        width: 100%;
+        color: rgba(51, 51, 51, 1);
+        font-size: 1.07rem;
+        text-align: center;
+        font-weight: bold;
+    }
 
-	.newsDetail_content .time {
-		margin-top: 0.54rem;
-		width: 100%;
-		color: rgba(153, 153, 153, 1);
-		font-size: 0.8rem;
-		text-align: left;
-	}
+    .newsDetail_content .time {
+        margin-top: 0.54rem;
+        width: 100%;
+        color: rgba(153, 153, 153, 1);
+        font-size: 0.8rem;
+        text-align: left;
+    }
 
-	.newsDetail_content .content {
-		margin-top: 0.89rem;
-		width: 100%;
-		color: rgba(114, 116, 118, 1);
-		font-size: 0.87rem;
-		text-align: justify;
-		line-height: 1.07rem;
-	}
+    .newsDetail_content .content {
+        margin-top: 0.89rem;
+        width: 100%;
+        color: rgba(114, 116, 118, 1);
+        font-size: 0.87rem;
+        text-align: justify;
+        line-height: 1.07rem;
+    }
 
-	.newsDetail_content .tag {
-		width: 100%;
-		color: rgba(51, 51, 51, 1);
-		font-size: 0.8rem;
-		text-align: left;
-	}
+    .newsDetail_content .tag {
+        width: 100%;
+        color: rgba(51, 51, 51, 1);
+        font-size: 0.8rem;
+        text-align: left;
+    }
 
-	.newsDetail_content .other {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
+    .newsDetail_content .other {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-	.newsDetail_content .other_item {
-		width: 100%;
-		margin-top: 0.67rem;
-		display: flex;
-		align-items: center;
-	}
+    .newsDetail_content .other_item {
+        width: 100%;
+        margin-top: 0.67rem;
+        display: flex;
+        align-items: center;
+    }
 
-	.newsDetail_content .other .other_item .item_time {
-		width: 3rem;
-		font-size: 0.8rem;
-		text-align: justify;
-		color: rgba(153, 153, 153, 1);
-	}
+    .newsDetail_content .other .other_item .item_time {
+        width: 3rem;
+        font-size: 0.8rem;
+        text-align: justify;
+        color: rgba(153, 153, 153, 1);
+    }
 
-	.newsDetail_content .other .other_item .item_title {
-		width: calc(100% - 3.67rem);
-		margin-left: 0.67rem;
-		font-size: 0.8rem;
-		text-align: left;
-		color: rgba(51, 51, 51, 1);
-		line-height: 1.5;
-	}
+    .newsDetail_content .other .other_item .item_title {
+        width: calc(100% - 3.67rem);
+        margin-left: 0.67rem;
+        font-size: 0.8rem;
+        text-align: left;
+        color: rgba(51, 51, 51, 1);
+        line-height: 1.5;
+    }
 }
