--- a/public/themes/simpleboot3/public/assets/style/css/news.css
+++ b/public/themes/simpleboot3/public/assets/style/css/news.css
@@ -61,7 +61,7 @@
     /* width: 100%; */
     width: 25.5357rem;
     margin: 0 auto;
-    padding: 1.7857rem 0;
+    padding-top: 1.7857rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -81,6 +81,14 @@
 
 .news .list .item:nth-of-type(3n+3) {
     margin-right: 0;
+}
+
+.news .list .item:nth-child(n + 7) {
+    margin-bottom: 0;
+}
+
+.news .pageLimitbox {
+    margin-bottom: 1.0714rem;
 }
 
 .news .item img {
@@ -279,6 +287,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+    }
+
+    .news .list .item:nth-child(n + 7) {
+        margin-bottom: 1rem;
     }
 
     .news .list .item img {
