--- a/public/themes/simpleboot3/public/assets/static/css/main.css
+++ b/public/themes/simpleboot3/public/assets/static/css/main.css
@@ -6759,7 +6759,7 @@ header {
     padding-bottom: 4%;
 }
 
-/* 关于真略 */
+/* 关于一帆 */
 .about_banner {
     height: 500px;
     background: url(../image/about_bg.jpg) no-repeat center;
