--- a/public/themes/default_en-us/static/css/products.css
+++ b/public/themes/default_en-us/static/css/products.css
@@ -3,9 +3,30 @@
   border-bottom: 1px solid #f2f2f2;
 }
 
+.nav-tabs {
+  border: none;
+}
+
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
+.tab-content>.active {
+  display: flex;
+}
+
+
 .productTag_content {
   display: flex;
   overflow-x: scroll;
+  /* 隐藏滚动条 */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.productTag_content::-webkit-scrollbar {
+  display: none;
 }
 
 .productTag_content_item {
