--- a/public/themes/default/static/css/enterThePlatform.css
+++ b/public/themes/default/static/css/enterThePlatform.css
@@ -1,5 +1,5 @@
 .enterThePlatform {
-  padding-bottom: 100px;
+  padding-bottom: 30px;
 }
 
 .enterThePlatform_box {
@@ -72,6 +72,47 @@
   color: #666;
 }
 
+.enter {
+  padding-bottom: 100px;
+}
+
+.enter_box {
+  background-color: var(--primary-color);
+  border-radius: 6px;
+  padding: 20px;
+}
+
+.enter_box_desc {
+  font-size: 14px;
+  line-height: 1.8;
+  color: #fff;
+  hyphens: auto;
+}
+
+.enter_box_btn {
+  width: 260px;
+  padding: 15px 0;
+  margin: 30px auto 10px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.enter_box_btn a {
+  display: block;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+}
+
+.enter_box_btn img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+  margin-right: 10px;
+}
+
 @media screen and (max-width: 1199px) {
   .enterThePlatform {
     padding-bottom: 3rem;
@@ -137,6 +178,38 @@
 
   .enterThePlatform_box_item_desc {
     font-size: 1rem;
+  }
+
+  .enter {
+    padding-bottom: 3rem;
+  }
+
+  .enter_box {
+    width: calc(100% - 6rem);
+    margin: 0 auto;
+    border-radius: .5rem;
+    padding: 1.5rem;
+  }
+
+  .enter_box_desc {
+    font-size: 1.1rem;
+  }
+
+  .enter_box_btn {
+    width: 26rem;
+    padding: 1.5rem 0;
+    margin: 2rem auto 1rem;
+    border-radius: .5rem;
+  }
+
+  .enter_box_btn a {
+    font-size: 1.1rem;
+  }
+
+  .enter_box_btn img {
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-right: 1rem;
   }
 }
 
