--- a/public/themes/default_en-us/static/css/footer.css
+++ b/public/themes/default_en-us/static/css/footer.css
@@ -31,6 +31,11 @@
   margin-bottom: auto;
 }
 
+.footer_box_top_left_slogan_bottom {
+  margin-top: 20px;
+  font-weight: 600;
+}
+
 .footer_box_top_left_icon {
   font-size: 0;
   display: flex;
