--- a/public/themes/default/static/css/index.css
+++ b/public/themes/default/static/css/index.css
@@ -78,7 +78,8 @@
 
 .ourService_item {
   width: 230px;
-  height: 200px;
+  /* height: 200px; */
+  padding: 30px 0;
   background-color: #fff;
   border-radius: 5px;
   display: flex;
@@ -93,8 +94,8 @@
 }
 
 .ourService_item_img img {
-  width: 60px;
-  height: 60px;
+  width: 170px;
+  height: 170px;
   object-fit: contain;
 }
 
@@ -201,8 +202,8 @@
   }
 
   .ourService_item_img img {
-    width: 4rem;
-    height: 4rem;
+    width: 12rem;
+    height: 12rem;
   }
 
   .ourService_item_title {
