--- a/public/themes/default_en-us/static/css/index.css
+++ b/public/themes/default_en-us/static/css/index.css
@@ -13,7 +13,7 @@
 
 .platformFeatures_top_img img {
   width: 600px;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -23,7 +23,6 @@
   color: var(--text8-color);
   font-size: 14px;
   line-height: 2;
-  text-align: justify;
   hyphens: auto;
 }
 
@@ -35,7 +34,11 @@
 }
 
 .platformFeatures_bottom_item {
-  width: 360px;
+  width: 320px;
+}
+
+.platformFeatures_bottom_item:nth-child(3) {
+  width: 440px;
 }
 
 .platformFeatures_bottom_item_img {
@@ -66,7 +69,6 @@
   font-size: 13px;
   line-height: 2;
   color: #666;
-  text-align: justify;
   hyphens: auto;
 }
 
@@ -102,7 +104,10 @@
 .ourService_item_title {
   font-size: 14px;
   font-weight: 600;
+  line-height: 1.5;
   color: rgba(24, 24, 24, .8);
+  margin: 0 15px;
+  text-align: center;
 }
 
 @media screen and (max-width: 1199px) {
