--- a/public/themes/default_en-us/static/css/enterThePlatform.css
+++ b/public/themes/default_en-us/static/css/enterThePlatform.css
@@ -83,10 +83,12 @@
 }
 
 .enter_box_desc {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
   line-height: 1.8;
   color: #fff;
-  hyphens: auto;
+  margin-top: 30px;
 }
 
 .enter_box_btn {
