--- a/public/themes/default/static/css/common.css
+++ b/public/themes/default/static/css/common.css
@@ -25,7 +25,7 @@ li {
 /* 灰色板块 */
 .grey {
   width: 100%;
-  padding-top: 100px;
+  padding-top: 50px;
   background-color: var(--grey-color);
   overflow: hidden;
 }
@@ -51,6 +51,13 @@ li {
 }
 
 .main-title .big-title {
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: #000;
+}
+
+.big-title {
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 25px;
@@ -101,6 +108,13 @@ li {
   }
 
   .main-title .big-title {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    color: #000;
+  }
+
+  .big-title {
     font-size: 2rem;
     font-weight: 700;
     margin-bottom: 1.5rem;
