--- a/public/themes/default_en-us/static/css/banner.css
+++ b/public/themes/default_en-us/static/css/banner.css
@@ -18,7 +18,9 @@
 .banner_box540 {
   height: 540px;
 }
-
+.banner_box460 {
+  height: 460px;
+}
 .banner_box_img {
   width: 100%;
   height: 100%;
@@ -95,7 +97,9 @@
   .banner_box540 {
     height: 54rem;
   }
-
+  .banner_box460 {
+    height: 46rem;
+  }
   .banner_box_img {
     width: 100%;
     height: 100%;
