--- a/public/themes/default/static/css/products.css
+++ b/public/themes/default/static/css/products.css
@@ -37,6 +37,11 @@ a:focus {
   padding: 0 30px;
   flex-shrink: 0;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .productTag_content .active {
