--- a/public/themes/default/static/css/supplyChain.css
+++ b/public/themes/default/static/css/supplyChain.css
@@ -43,7 +43,6 @@
 
 .supply_content_item_right_title_big{
   margin-top: 40px;
-  width: 800px;
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
@@ -51,7 +50,6 @@
 }
 
 .supply_content_item_right_title_small{
-  width: 600px;
   font-size: 14px;
   line-height: 24px;
 }
@@ -88,6 +86,7 @@
   top: 5%;
   left: 5%;
   color: #fff;
+  line-height: 35px;
 }
 
 .supply_center_title_small{
