--- a/public/themes/default/static/css/products.css
+++ b/public/themes/default/static/css/products.css
@@ -45,8 +45,10 @@ a:focus {
 }
 
 .productTag_content .active {
-  background-color: var(--primary-color);
-  color: #fff;
+  /* background-color: var(--primary-color); */
+  color: var(--primary-color);
+  border-bottom: 1px solid;
+  border-bottom-color: var(--primary-color);
 }
 
 .productList {
@@ -160,6 +162,12 @@ a:focus {
     margin-right: 1rem;
     line-height: 3rem;
     padding: 0 2rem;
+  }
+
+  .productTag_content_item .img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
   }
 
   .productList {
