--- a/public/themes/default/static/css/supplyChain.css
+++ b/public/themes/default/static/css/supplyChain.css
@@ -14,12 +14,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 .supply_line{
   margin-top: 20px;
   float: left; width: 3px; height: 25px;  background: #d4c4c4;
 }
 .supply_content_item{
+  width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: 10px;
@@ -190,6 +192,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
   .supply_line{
     margin-top: 20px;
@@ -200,6 +203,7 @@
     align-items: center;
     margin-bottom: 10px;
     color: #51200b;
+    width: 100%;
   }
 
   .supply_content_item_left{
@@ -219,7 +223,7 @@
 
   .supply_content_item_right_title_big{
     margin-top: 40px;
-    width: calc(100% - 200px);
+    width: calc(100% - 100px);
     font-size: 24px;
     font-weight: 700;
     line-height: 30px;
@@ -227,7 +231,7 @@
   }
 
   .supply_content_item_right_title_small{
-    width: 600px;
+    width: calc(100% - 50px);
     font-size: 14px;
     line-height: 24px;
   }
