--- a/public/themes/default/static/css/common.css
+++ b/public/themes/default/static/css/common.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   line-height: 1;
-  --primary-color: #22c32d;
+  --primary-color: #27ae60;
   --primary-rgba1: rgba(34, 195, 45, .05);
   --grey-color: #f8f8f8;
   --text8-color: rgba(24, 24, 24, .8);
