--- a/public/themes/default_en-us/static/css/about.css
+++ b/public/themes/default_en-us/static/css/about.css
@@ -3,6 +3,14 @@ body {
   overflow-y: scroll;
 }
 
+.about:nth-child(odd) {
+  background-color: var(--grey-color);
+}
+
+.about:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
 .aboutBanner {
   width: 100%;
   background-color: var(--primary-color);
@@ -36,6 +44,8 @@ body {
   position: relative;
   z-index: 2;
   padding-top: 0px;
+  padding-bottom: 100px;
+
 }
 
 .about_top {
@@ -54,10 +64,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   /* margin-top: -100px; */
   position: relative;
   z-index: 2;
+  margin-bottom: 30px;
 }
 
 .about_left_title {
